[package]
name = "blazing-shustriy-asyncio"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "blazing_shustriy_asyncio"
crate-type = ["cdylib"]

[dependencies]
crossbeam-channel = "0.5.15"
ctrlc = "3.5.2"
mio = { version = "1.1.1", features = ["net", "os-poll", "os-ext"] }
num_cpus = "1.17.0"
pyo3 = "0.25.0"
socket2 = { version = "0.6.2", features = ["all"] }
tokio = { version = "1.49.0", features = ["full", "mio", "net", "socket2"] }
