[package]
name = "blazing-shustriy-asyncio"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "blazing_shustriy_asyncio"
crate-type = ["cdylib"]

[dependencies]
bytes = "1.11.1"
crossbeam-channel = "0.5.15"
ctrlc = "3.5.2"
httparse = "1.10.1"
itoa = "1.0.17"
lockfree-object-pool = "0.1.6"
matchit = "0.9.1"
mimalloc = "0.1.48"
mio = { version = "1.1.1", features = ["net", "os-poll", "os-ext"] }
num_cpus = "1.17.0"
parking_lot = "0.12.5"
pyo3 = "0.28.2"
pythonize = { version = "0.28.0", features = ["serde_json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
socket2 = { version = "0.6.2", features = ["all"] }
tokio = { version = "1.49.0", features = ["full", "mio", "net", "socket2"] }
